Stopped the ORCID ID wrapping in search results.

--- a/orcid-web/src/main/webapp/static/css/orcid.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.css
@@ -2245,3 +2245,7 @@ header overrides
 .new-search-result {
 	display: none;
 }
+
+.search-result-orcid-id {
+	white-space:nowrap;
+}
